# TinyRayTracing

./: .gitmodules  LICENSE  README.md
projects/inOneWeekend/: .gitignore  CMakeLists.txt  main.cpp  run.zsh  test.ppm
projects/inOneWeekend/include/: camera.hpp  image.hpp  material.hpp  pch.hpp  primitive.hpp  ray.hpp  scene.hpp  utilities.hpp
projects/inOneWeekend/result/: background.ppm  error-objsOcclusion.ppm  error-offsetExceedPixelSize.ppm  gammaCorrection.ppm  lambertian.ppm  materialSys.ppm  multisampling.ppm  simpleSphere.ppm  sphereNormal.ppm  test.ppm
